<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_HydraulicCilinderMachParAnalog" Id="{3275cf9f-0ba9-4eb0-b811-d5975f522383}">
    <Declaration><![CDATA[TYPE ST_HydraulicCilinderMachParAnalog :
STRUCT
	Hysteresis			: REAL := 2.0;
	MaxRodSidePressure	: REAL := 100.0;
	MaxBotSidePressure	: REAL := 100.0;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>